created a helper function to populate database with pages and also updated split_image. we uploading all our jobs now

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ final/public/images
 final/public/prints
 final/public/packed
 final/public/maps
+final/public/prints
 
 final/tickets/kmls
 todo.txt
