--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/express": "^4.17.13",
     "@types/leaflet": "^1.7.11",
     "@types/node": "^18.0.0",
+    "@types/pdfkit": "^0.12.6",
     "@types/pg": "^8.6.5",
     "@types/puppeteer": "^5.4.6",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "leaflet": "^1.8.0",
+    "pdfkit": "^0.13.0",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
     "puppeteer": "^14.4.1",
